--- a/Calculator/app/src/main/res/layout/activity_main.xml
+++ b/Calculator/app/src/main/res/layout/activity_main.xml
@@ -1,224 +1,317 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#E4000000"
+    android:background="#3A3939"
+    android:theme="@style/Theme.Design.NoActionBar"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/calculator"
+        android:textColor="@color/white"
+        android:textSize="32sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="0"
-        android:background="@color/black"
-        android:layout_weight="1"
-        android:gravity="right"
-        android:textSize="80sp"
+        android:layout_margin="5dp"
+        android:padding="12dp"
+        android:text="@string/_0"
+        android:textAlignment="viewEnd"
         android:textColor="@color/white"
-        />
-
+        android:textSize="58sp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout0"
+        tools:layout_editor_absoluteX="5dp" />
 
     <LinearLayout
+        android:id="@+id/linearLayout0"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout">
 
-        <Button
-            android:id="@+id/one"
-            android:layout_width="wrap_content"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bclear"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
             android:layout_margin="3dp"
-            android:text="1"
-            />
-        <Button
-            android:id="@+id/two"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
-            android:layout_margin="3dp"
-            android:text="2"
-            />
-        <Button
-            android:id="@+id/three"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
-            android:layout_margin="3dp"
-            android:text="3"
-            />
-        <Button
-            android:id="@+id/plus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
-            android:textSize="65sp"
-            android:elevation="1dp"
-            android:layout_margin="3dp"
-            android:text="+"
-            />
-
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
+            android:text="@string/clear"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
     </LinearLayout>
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/four"
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
             android:layout_margin="3dp"
-            android:text="4"
-            />
-        <Button
-            android:id="@+id/five"
+            android:padding="20dp"
+            android:text="@string/_1"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="5"
-            />
-        <Button
-            android:id="@+id/six"
+            android:text="@string/_2"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="6"
-            />
-        <Button
-            android:id="@+id/minus"
+            android:text="@string/_3"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="-"
-            />
+            android:text="@string/x"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/seven"
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="7"
-            />
-        <Button
-            android:id="@+id/eight"
+            android:text="@string/_4"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="8"
-            />
-        <Button
-            android:id="@+id/nine"
+            android:text="@string/_5"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="9"
-            />
-        <Button
-            android:id="@+id/divide"
+            android:text="@string/_6"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bminus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="/"
-            />
+            android:text="@string/minus"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="2dp"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <Button
-            android:id="@+id/zero"
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#EF6C00"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="0"
-            />
-        <Button
-            android:id="@+id/decimal"
+            android:text="@string/_7"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="."
-            />
-        <Button
-            android:id="@+id/equals"
+            android:text="@string/_8"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="="
-            />
-        <Button
-            android:id="@+id/multiply"
+            android:text="@string/_9"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bplus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#000000"
-            android:textSize="65sp"
-            android:elevation="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
             android:layout_margin="3dp"
-            android:text="*"
-            />
+            android:text="@string/plus"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/b0"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
+            android:layout_margin="3dp"
+            android:text="@string/_0"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bdecimal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
+            android:layout_margin="3dp"
+            android:text="@string/decimal"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bequals"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
+            android:layout_margin="3dp"
+            android:text="@string/equals"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/bdivide"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/button"
+            android:elevation="11dp"
+            android:padding="20dp"
+            android:layout_margin="3dp"
+            android:text="@string/divide"
+            android:textColor="@color/white"
+            android:textSize="24sp" />
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
